--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <ul class="nav-links">
                     <li><a href="#" id="first">Beranda</a></li>
                     <li><a href="#koleksi">Koleksi</a></li>
-                    <li><a href="#">Pria</a></li>
-                    <li><a href="#">Wanita</a></li>
+                    <li><a href="#koleksi">Pria</a></li>
+                    <li><a href="#koleksi">Wanita</a></li>
                     <li><a href="#">Tentang Kami</a></li>
                     <li><a href="#">Kontak</a></li>
                 </ul>
