--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <li><a href="#koleksi">Koleksi</a></li>
                     <li><a href="#koleksi">Pria</a></li>
                     <li><a href="#koleksi">Wanita</a></li>
-                    <li><a href="#">Tentang Kami</a></li>
-                    <li><a href="#">Kontak</a></li>
+                    <li><a href="#tentang kami">Tentang Kami</a></li>
+                    <li><a href="#kontak">Kontak</a></li>
                 </ul>
                 <div class="cart-icon">
                     Keranjang (0)
@@ -154,7 +154,7 @@
     <!-- Benefits -->
     <section class="benefits">
         <div class="container">
-            <div class="section-heading">
+            <div class="section-heading" id="tentang kami">
                 <h2>KEUNGGULAN KAMI</h2>
                 <p>Mengapa harus memilih URBAN HOOD?</p>
             </div>
@@ -246,7 +246,7 @@
                 </div>
                 
                 <!-- Column 4 -->
-                <div class="footer-column">
+                <div class="footer-column" id="kontak">
                     <h3>Kontak Kami</h3>
                     <ul>
                         <li>Email: info@urbanhood.id</li>
